--- a/index.html
+++ b/index.html
@@ -1,71 +1,110 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ADMI Learning Login</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <title>ADMI Learning Platform</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom right, #003366, #00AABB);
-      margin: 0; padding: 0;
+      margin: 0;
+      background: #f4f6f8;
+      color: #333;
+    }
+    header {
+      background: #003366;
       color: white;
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-      min-height: 100vh;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    .card {
-      background: white;
-      color: #1f2937;
-      padding: 2rem;
-      border-radius: 12px;
-      max-width: 400px;
-      text-align: center;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-    }
-    .card h2 {
-      color: #003366;
-      margin-bottom: 1rem;
+    header img {
+      height: 40px;
     }
     .btn {
       background: #00AABB;
-      color: white;
-      padding: 0.75rem 1.5rem;
       border: none;
-      border-radius: 6px;
+      padding: 0.6rem 1.2rem;
+      color: white;
       font-size: 1rem;
+      border-radius: 5px;
       cursor: pointer;
-      margin-top: 1rem;
     }
     .btn:hover {
       background: #008fa0;
     }
-    .error {
-      color: red;
-      margin-top: 1rem;
-      font-size: 0.9rem;
+    .welcome {
+      padding: 1rem 2rem;
+      font-size: 1.2rem;
     }
-    .logout {
-      display: none;
-      margin-top: 1rem;
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1rem;
+      padding: 1rem 2rem;
+    }
+    .card {
+      background: white;
+      border-radius: 8px;
+      padding: 1rem;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .card iframe {
+      width: 100%;
+      height: 200px;
+      border: none;
+      border-radius: 6px;
+    }
+    .card a {
+      display: inline-block;
+      margin-top: 0.5rem;
+      color: #003366;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    footer {
+      background: #003366;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
-  <div class="card" id="loginCard">
-    <h2>Welcome to ADMI Learning</h2>
-    <p>Sign in with your school Google account to access your dashboard.</p>
-    <button class="btn" id="loginBtn">Sign in with Google</button>
-    <div class="error" id="errorMsg"></div>
+  <header>
+    <div style="display: flex; align-items: center; gap: 1rem;">
+      <img src="assets/logo-admi-learning.png" alt="ADMI Logo" />
+      <h1>ADMI Learning</h1>
+    </div>
+    <button id="logoutBtn" class="btn">Logout</button>
+  </header>
+
+  <div class="welcome" id="welcomeMsg">Welcome, <span id="userName">Student</span>!</div>
+
+  <div class="grid">
+    <div class="card">
+      <h3>YouTube: Intro to Editing</h3>
+      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+    </div>
+    <div class="card">
+      <h3>Drive: Course Materials</h3>
+      <a href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID" target="_blank">View Google Drive Folder</a>
+    </div>
+    <div class="card">
+      <h3>Analytics (coming soon)</h3>
+      <p>Track how much content you’ve viewed and your progress.</p>
+    </div>
   </div>
 
-  <div class="card" id="dashboard" style="display: none;">
-    <h2>Welcome, <span id="userName">Student</span>!</h2>
-    <p>You are now logged in.</p>
-    <button class="btn logout" id="logoutBtn">Logout</button>
-  </div>
+  <footer>
+    &copy; 2025 ADMI Learning. Empowering Africa's Creatives.
+  </footer>
 
   <script>
     const firebaseConfig = {
@@ -79,58 +118,22 @@
     };
 
     firebase.initializeApp(firebaseConfig);
-    console.log("✅ Firebase initialized");
-
     const auth = firebase.auth();
-    const loginBtn = document.getElementById('loginBtn');
-    const logoutBtn = document.getElementById('logoutBtn');
-    const loginCard = document.getElementById('loginCard');
-    const dashboard = document.getElementById('dashboard');
-    const userName = document.getElementById('userName');
-    const errorMsg = document.getElementById('errorMsg');
 
-    loginBtn.onclick = () => {
-      console.log("🔐 Login button clicked");
-      const provider = new firebase.auth.GoogleAuthProvider();
-      auth.signInWithPopup(provider)
-        .then(result => {
-          console.log("✅ Login result:", result);
-          const name = result.user.displayName || "Student";
-          userName.textContent = name;
-          loginCard.style.display = 'none';
-          dashboard.style.display = 'block';
-          logoutBtn.style.display = 'inline-block';
-          errorMsg.textContent = "";
-        })
-        .catch(error => {
-          console.error("❌ Login error:", error);
-          errorMsg.textContent = error.message;
-        });
-    };
+    const logoutBtn = document.getElementById("logoutBtn");
+    const userNameSpan = document.getElementById("userName");
 
     logoutBtn.onclick = () => {
       auth.signOut().then(() => {
-        console.log("🔓 Logged out");
-        loginCard.style.display = 'block';
-        dashboard.style.display = 'none';
-        logoutBtn.style.display = 'none';
-        errorMsg.textContent = '';
+        window.location.reload();
       });
     };
 
     auth.onAuthStateChanged(user => {
       if (user) {
-        console.log("✅ Auth state detected:", user);
-        const name = user.displayName || "Student";
-        userName.textContent = name;
-        loginCard.style.display = 'none';
-        dashboard.style.display = 'block';
-        logoutBtn.style.display = 'inline-block';
+        userNameSpan.textContent = user.displayName || "Student";
       } else {
-        console.log("ℹ️ No user signed in");
-        loginCard.style.display = 'block';
-        dashboard.style.display = 'none';
-        logoutBtn.style.display = 'none';
+        window.location.href = "/";
       }
     });
   </script>
