--- a/index.html
+++ b/index.html
@@ -1,141 +1,2 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ADMI Learning Platform</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      background: #f4f6f8;
-      color: #333;
-    }
-    header {
-      background: #003366;
-      color: white;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header img {
-      height: 40px;
-    }
-    .btn {
-      background: #00AABB;
-      border: none;
-      padding: 0.6rem 1.2rem;
-      color: white;
-      font-size: 1rem;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .btn:hover {
-      background: #008fa0;
-    }
-    .welcome {
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1rem;
-      padding: 1rem 2rem;
-    }
-    .card {
-      background: white;
-      border-radius: 8px;
-      padding: 1rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .card iframe {
-      width: 100%;
-      height: 200px;
-      border: none;
-      border-radius: 6px;
-    }
-    .card a {
-      display: inline-block;
-      margin-top: 0.5rem;
-      color: #003366;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    footer {
-      background: #003366;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div style="display: flex; align-items: center; gap: 1rem;">
-      <img src="assets/logo-admi-learning.png" alt="ADMI Logo" />
-      <h1>ADMI Learning</h1>
-    </div>
-    <button id="logoutBtn" class="btn">Logout</button>
-  </header>
-
-  <div class="welcome" id="welcomeMsg">Welcome, <span id="userName">Student</span>!</div>
-
-  <div class="grid">
-    <div class="card">
-      <h3>YouTube: Intro to Editing</h3>
-      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-    </div>
-    <div class="card">
-      <h3>Drive: Course Materials</h3>
-      <a href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID" target="_blank">View Google Drive Folder</a>
-    </div>
-    <div class="card">
-      <h3>Analytics (coming soon)</h3>
-      <p>Track how much content you’ve viewed and your progress.</p>
-    </div>
-  </div>
-
-  <footer>
-    &copy; 2025 ADMI Learning. Empowering Africa's Creatives.
-  </footer>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCT8NSfb_MS11TtF-YEmqRYiOxFj9E7uS8",
-      authDomain: "admi-learning.firebaseapp.com",
-      projectId: "admi-learning",
-      storageBucket: "admi-learning.firebasestorage.app",
-      messagingSenderId: "544669303083",
-      appId: "1:544669303083:web:a7031e48d85fe27780856e",
-      measurementId: "G-9FEF71D529"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-
-    const logoutBtn = document.getElementById("logoutBtn");
-    const userNameSpan = document.getElementById("userName");
-
-    logoutBtn.onclick = () => {
-      auth.signOut().then(() => {
-        window.location.reload();
-      });
-    };
-
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        userNameSpan.textContent = user.displayName || "Student";
-      } else {
-        window.location.href = "/";
-      }
-    });
-  </script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta http-equiv="Refresh" content="0; URL=dashboard.html" /></head><body></body></html>
