--- a/dashboard.html
+++ b/dashboard.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<!DOCTYPE html><html lang="en">
+<head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Dashboard - ADMI Learning</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
 <style>
@@ -17,6 +16,7 @@ footer { background: #003366; color: white; text-align: center; padding: 1rem; m
 
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 <script>
   const firebaseConfig = {
     apiKey: "AIzaSyCT8NSfb_MS11TtF-YEmqRYiOxFj9E7uS8",
@@ -28,16 +28,18 @@ footer { background: #003366; color: white; text-align: center; padding: 1rem; m
     measurementId: "G-9FEF71D529"
   };
   firebase.initializeApp(firebaseConfig);
+</script>
+<script src="scripts/analytics.js" defer></script>
+
+<script>
   const auth = firebase.auth();
   auth.onAuthStateChanged(user => {
-    if (!user) window.location.href = "/";
-    else document.getElementById("userName").textContent = user.displayName || "Student";
+    if (!user && true) window.location.href = "/";
+    else document.getElementById("userName").textContent = user?.displayName || "Student";
   });
   function logout() { auth.signOut().then(() => window.location.href = "/"); }
 </script>
-
-</head>
-<body>
+</head><body>
 <header>
   <div style="display: flex; align-items: center; gap: 1rem;">
     <img src="assets/logo-admi-learning.png" alt="ADMI Logo" />
@@ -54,11 +56,6 @@ footer { background: #003366; color: white; text-align: center; padding: 1rem; m
     <button onclick="logout()" style="margin-left:1rem;">Logout</button>
   </div>
 </header>
-<div class="container">
-  
-<h2>Welcome to your dashboard</h2>
-<p>Select a tab above to start learning. Use the Videos and Resources pages to explore ADMI content.</p>
-
-</div>
+<div class="container"><h2>Welcome to your dashboard</h2><p>Explore tabs above to continue learning.</p></div>
 <footer>&copy; 2025 ADMI Learning</footer>
 </body></html>
