--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta http-equiv="Refresh" content="0; URL=dashboard.html" /></head><body></body></html>
+<!DOCTYPE html><html><head><meta http-equiv="refresh" content="0;URL=dashboard.html"/></head><body></body></html>
