--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script>
-    const firebaseConfig = {{
+    const firebaseConfig = {
       apiKey: "AIzaSyCT8NSfb_MS11TtF-YEmqRYiOxFj9E7uS8",
       authDomain: "admi-learning.firebaseapp.com",
       projectId: "admi-learning",
@@ -28,7 +28,7 @@
       messagingSenderId: "544669303083",
       appId: "1:544669303083:web:a7031e48d85fe27780856e",
       measurementId: "G-9FEF71D529"
-    }};
+    };
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
