--- a/resources.html
+++ b/resources.html
@@ -71,7 +71,9 @@ footer { background: #003366; color: white; text-align: center; padding: 1rem; m
 <h2>Google Drive Folders</h2>
 <div class="card"><h3>Semester 1</h3><a data-track href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID_1" target="_blank">Open Folder</a></div>
 <div class="card"><h3>Semester 2</h3><a data-track href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID_2" target="_blank">Open Folder</a></div>
-
+<div class="card"><h3>Semester 3</h3><a data-track href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID_3" target="_blank">Open Folder</a></div>
+<div class="card"><h3>Semester 4</h3><a data-track href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID_4" target="_blank">Open Folder</a></div> 
+<div class="card"><h3>Semester 5</h3><a data-track href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID_5" target="_blank">Open Folder</a></div>
 </div>
 <footer>&copy; 2025 ADMI Learning</footer>
 </body></html>
