--- a/dashboard.html
+++ b/dashboard.html
@@ -29,6 +29,7 @@
       </nav>
     </div>
     <div>
+      Welcome, <span id="userName">...</span>
       <button onclick="logout()" style="margin-left:1rem;">Logout</button>
     </div>
   </header>
