--- a/dashboard.html
+++ b/dashboard.html
@@ -1,63 +1,86 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard - ADMI Learning</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
-  <style>
-    body { font-family: 'Inter', sans-serif; margin: 0; background: #f4f6f8; color: #333; }
-    header { background: #003366; color: white; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; }
-    header img { height: 40px; }
-    nav a { margin-right: 1rem; color: white; text-decoration: none; }
-    nav a:hover { text-decoration: underline; }
-    .container { padding: 2rem; }
-    footer { background: #003366; color: white; text-align: center; padding: 1rem; margin-top: 2rem; }
-  </style>
+<html><head>
+<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dashboard - ADMI</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+<style>
+
+body{font-family:'Inter',sans-serif;margin:0;background:#f4f6f8;}
+
+header{background:#003366;color:white;padding:1rem 2rem;display:flex;justify-content:space-between;align-items:center;}
+
+nav a{color:white;margin-right:1rem;text-decoration:none;}
+
+footer{background:#003366;color:white;text-align:center;padding:1rem;}
+
+.container{padding:2rem;}
+</style>
+ 
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+<script>
+
+const firebaseConfig = {
+
+  apiKey: "AIzaSyCT8NSfb_MS11TtF-YEmqRYiOxFj9E7uS8",
+
+  authDomain: "admi-learning.firebaseapp.com",
+
+  projectId: "admi-learning",
+
+  storageBucket: "admi-learning.firebasestorage.app",
+
+  messagingSenderId: "544669303083",
+
+  appId: "1:544669303083:web:a7031e48d85fe27780856e",
+
+  measurementId: "G-9FEF71D529"
+
+};
+
+firebase.initializeApp(firebaseConfig);
+</script>
+ 
+<script src="scripts/auth-check.js"></script>
 </head>
 <body>
-  <header>
-    <div style="display: flex; align-items: center; gap: 1rem;">
-      <img src="assets/logo-admi-learning.png" alt="ADMI Logo" />
-      <strong>ADMI Learning</strong>
-      <nav>
-        <a href="dashboard.html">Dashboard</a>
-        <a href="videos.html">Videos</a>
-        <a href="resources.html">Resources</a>
-        <a href="analytics.html">Analytics</a>
-      </nav>
-    </div>
-    <div>
-      Welcome, <span id="userName">...</span>
-      <button onclick="logout()" style="margin-left:1rem;">Logout</button>
-    </div>
-  </header>
+<header>
+<div style="display:flex;align-items:center;gap:1rem;">
+<img src="assets/logo-admi-learning.png" alt="ADMI Logo" height="40"/>
+<strong>ADMI Learning</strong>
+<nav>
+<a href="dashboard.html">Dashboard</a>
+<a href="videos.html">Videos</a>
+<a href="resources.html">Resources</a>
+<a href="analytics.html">Analytics</a>
+</nav>
+</div>
+<div>
 
-  <div class="container">
-    <h2>Welcome to your dashboard</h2>
-    <p>Explore your content and continue learning.</p>
-  </div>
+    Welcome, <span id="userName">...</span>
+<button onclick="logout()">Logout</button>
+</div>
+</header>
+<div class="container">
+<h2>Welcome to your dashboard</h2>
+<p>Explore videos, resources, and track your learning progress.</p>
+</div>
+<footer>© 2025 ADMI Learning</footer>
+<script>
 
-  <footer>&copy; 2025 ADMI Learning</footer>
+function logout() {
 
-  <script>
-    const firebaseConfig = {{
-      apiKey: "AIzaSyCT8NSfb_MS11TtF-YEmqRYiOxFj9E7uS8",
-      authDomain: "admi-learning.firebaseapp.com",
-      projectId: "admi-learning",
-      storageBucket: "admi-learning.firebasestorage.app",
-      messagingSenderId: "544669303083",
-      appId: "1:544669303083:web:a7031e48d85fe27780856e",
-      measurementId: "G-9FEF71D529"
-    }};
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    function logout() {
-      auth.signOut().then(() => {
-        window.location.replace("/");
-      });
-    }
-  </script>
-</body>
-</html>
+  firebase.auth().signOut().then(() => window.location.replace("/"));
+
+}
+ 
+enforceAccessControl((user) => {
+
+  document.getElementById("userName").textContent = user.displayName || user.email;
+
+});
+</script>
+</body></html>
+
+ 
