--- a/dashboard.html
+++ b/dashboard.html
@@ -110,12 +110,11 @@ footer {
 </nav>
 </div>
 <div>
-    Welcome, <span id="userName">...</span>
 <button onclick="logout()" style="margin-left:1rem;">Logout</button>
 </div>
 </header>
 <section class="hero">
-<h1>Hello, <span id="studentName">Student</span> 👋</h1>
+<h1>Hello, <span id="userName">...</span> 👋</h1>
 <p>Welcome to your learning dashboard. Ready to dive in?</p>
 </section>
 <div class="container">
