--- a/videos.html
+++ b/videos.html
@@ -84,6 +84,24 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script src="scripts/auth-check.js"></script>
+
+<script>
+  const auth = firebase.auth();
+  auth.onAuthStateChanged(user => {
+    if (!user) {
+      window.location.href = "/";
+    } else {
+      document.getElementById("userName").textContent = user.displayName || "Student";
+      document.querySelector(".container").style.display = "block";
+    }
+  });
+  function logout() {
+    firebase.auth().signOut().then(() => {
+      window.location.href = "/";
+    });
+  }
+</script>
+  
 </head>
 <body>
   <header>
