--- a/videos.html
+++ b/videos.html
@@ -95,7 +95,8 @@
         <a href="videos.html">Videos</a>
         <a href="resources.html">Resources</a>
         <a href="analytics.html">Analytics</a>
-      </nav>
+      <a href="admin-tools.html">Admin</a>
+    </nav>
     </div>
     <div>
       Welcome, <span id="userName">...</span>
