--- a/analytics.html
+++ b/analytics.html
@@ -1,73 +1,53 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8" />
+<html><head>
+<meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Analytics - ADMI Learning</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
-<style>
-body { font-family: 'Inter', sans-serif; margin: 0; background: #f4f6f8; color: #333; }
-header { background: #003366; color: white; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; }
-header img { height: 40px; }
-nav a { margin-right: 1rem; color: white; text-decoration: none; }
-nav a:hover { text-decoration: underline; }
-.container { padding: 2rem; display: none; }
-.card { background: white; padding: 1rem; border-radius: 8px; margin-bottom: 1rem; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-iframe { width: 100%; height: 200px; border-radius: 6px; }
-footer { background: #003366; color: white; text-align: center; padding: 1rem; margin-top: 2rem; }
-</style>
-
+<title>Analytics - ADMI</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"/>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCT8NSfb_MS11TtF-YEmqRYiOxFj9E7uS8",
-    authDomain: "admi-learning.firebaseapp.com",
-    projectId: "admi-learning",
-    storageBucket: "admi-learning.firebasestorage.app",
-    messagingSenderId: "544669303083",
-    appId: "1:544669303083:web:a7031e48d85fe27780856e",
-    measurementId: "G-9FEF71D529"
-  };
-  firebase.initializeApp(firebaseConfig);
-</script>
-<script src="scripts/analytics.js" defer></script>
-
-<script>
-  const auth = firebase.auth();
-  auth.onAuthStateChanged(user => {
-    if (!user) {
-      window.location.href = "/";
-    } else {
-      document.getElementById("userName").textContent = user.displayName || "Student";
-      document.querySelector(".container").style.display = "block";
-    }
-  });
-  function logout() {
-    firebase.auth().signOut().then(() => {
-      window.location.href = "/";
-    });
-  }
-</script>
+<script src="scripts/auth-check.js"></script>
+<script src="scripts/charts.js"></script>
+<style>
+body{font-family:'Inter',sans-serif;margin:0;background:#f4f6f8;}
+header{background:#003366;color:white;padding:1rem 2rem;display:flex;justify-content:space-between;align-items:center;}
+nav a{color:white;margin-right:1rem;text-decoration:none;}
+footer{background:#003366;color:white;text-align:center;padding:1rem;}
+.container{padding:2rem;}
+</style>
 </head>
 <body>
 <header>
-  <div style="display: flex; align-items: center; gap: 1rem;">
-    <img src="assets/logo-admi-learning.png" alt="ADMI Logo" />
+  <div style="display:flex;align-items:center;gap:1rem;">
+    <img src="assets/logo-admi-learning.png" alt="ADMI Logo" height="40"/>
     <strong>ADMI Learning</strong>
     <nav>
       <a href="dashboard.html">Dashboard</a>
       <a href="videos.html">Videos</a>
       <a href="resources.html">Resources</a>
       <a href="analytics.html">Analytics</a>
+      <a href="admin-tools.html">Admin</a>
     </nav>
   </div>
   <div>
     Welcome, <span id="userName">...</span>
-    <button onclick="logout()" style="margin-left:1rem;">Logout</button>
+    <button onclick="logout()">Logout</button>
   </div>
 </header>
+
 <div class="container">
-  <h2>Analytics Page</h2><p>You’ll see session logs here in future.</p>
+  <h2>Analytics Dashboard</h2>
+  <canvas id="loginChart"></canvas>
 </div>
-<footer>&copy; 2025 ADMI Learning</footer>
+
+<footer>© 2025 ADMI Learning</footer>
+
+<script>
+function logout() {
+  firebase.auth().signOut().then(() => window.location.replace("/"));
+}
+enforceAccessControl(() => renderLoginChart("loginChart"));
+</script>
 </body></html>
